Documentation edits made through Mintlify web editor

--- a/concepts/sipnetwork.mdx
+++ b/concepts/sipnetwork.mdx
@@ -16,7 +16,7 @@ The SIP Network in Fonoster is designed with a telephony-first approach, making 
 - Managing complex routing scenarios between various endpoints
 - Providing secure and controlled access to telephony resources
 
-## Core Components
+## SIP elements
 
 The SIP Network consists of several key components that work together to enable voice communications:
 
@@ -46,7 +46,7 @@ ACLs provide security by controlling which IP addresses can access the system, w
 
 ACLs in Fonoster operate at the Domain level.
 
-## Routing Types
+## Routing types
 
 Fonoster's SIP Network supports various routing scenarios:
 
@@ -62,11 +62,11 @@ Allows agents to make calls to external telephone numbers through configured tru
 
 Enables incoming calls from external telephone numbers to reach specific agents.
 
-## Key Benefits
+## Key benefits
 
 Fonoster's SIP Network architecture provides several advantages:
 
-1. **Legacy Integration**: Interconnection with traditional telephony systems with modern applications
+1. **Legacy integration**: Interconnection with traditional telephony systems with modern applications
 
 2. **Flexibility**: Support for various routing scenarios and communication patterns
 
@@ -74,7 +74,7 @@ Fonoster's SIP Network architecture provides several advantages:
 
 4. **Scalability**: Distributed architecture supporting growth in usage and complexity
 
-5. **Standards Compliance**: Implementation based on established SIP protocols and standards
+5. **Standards compliance**: Implementation based on established SIP protocols and standards
 
 ## Use Cases
 
