Documentation edits made through Mintlify web editor

--- a/concepts/sipnetwork.mdx
+++ b/concepts/sipnetwork.mdx
@@ -3,8 +3,6 @@ title: 'SIP Network'
 description: 'Understanding SIP networking in Fonoster'
 ---
 
-# SIP Network
-
 Fonoster's SIP Network provides a robust infrastructure for handling Voice over IP (VoIP) communications powered by [Routr.io.](https://routr.io) This foundation enables integration between modern applications and traditional telephony systems through the Session Initiation Protocol (SIP).
 
 ## Overview
@@ -76,7 +74,7 @@ Fonoster's SIP Network architecture provides several advantages:
 
 5. **Standards compliance**: Implementation based on established SIP protocols and standards
 
-## Use Cases
+## Use cases
 
 The SIP Network is particularly valuable for:
 
